force-app/main/default/objects/Contact_Tag__c/Contact_Tag__c.object-meta.xml
<CustomObject>
    <description>Junction object between Contact and Tag to support M:M relationships. US0516</description>
    <label>Contact-Tag</label>
    <nameField>
        <displayFormat>CTAG{0000}</displayFormat>
        <label>Contact-Tag ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact-Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>