force-app/main/default/objects/Contact_Tag__c/fields/Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email__c</fullName>
    <formula>Contact__r.Receive_campaign_emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the contact can or cannot receive marketing emails from CCS. True, do not contact. False, able to contact</inlineHelpText>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>