force-app/main/default/objects/Contact_Tag__c/fields/Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Order__c</fullName>
    <formula>TEXT(IF(TEXT(Status__c) = &apos;Active&apos; , 0, 1)) + LEFT( Tag__r.Name , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sorting Order</label>
    <type>Text</type>
</CustomField>