force-app/main/default/objects/Contact_Tag__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IF( AND( TEXT(Status__c) = &quot;Active&quot;), IMAGE(&quot;https://png.icons8.com/color/18/000000/ok.png&quot;, &quot;ACTIVE&quot;),
IF( AND( TEXT(Status__c) = &quot;Inactive&quot; ), IMAGE(&quot;https://png.icons8.com/flat_round/15/000000/delete-sign.png&quot;, &quot;INACTIVE&quot;),
IMAGE(&quot;https://png.icons8.com/metro/30/000000/delete-sign.png&quot;, &quot;UNKNOWN&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>